--- a/SCPersonalProject/Views/Default/HeadPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeadPartial.cshtml
@@ -2,13 +2,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>DevFolio Bootstrap Portfolio Template - Index</title>
+    <title>Sinan Çıvak</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="~/person/assets/img/favicon.png" rel="icon">
-    <link href="~/person/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    @*<link href="~/person/assets/img/logo67.png" rel="icon">*@
+    @*<link href="~/person/assets/img/apple-touch-icon.png" rel="apple-touch-icon">*@
 
     <!-- Vendor CSS Files -->
     <link href="~/person/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
