--- a/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
+++ b/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
@@ -4,7 +4,7 @@
             <div class="site-navigation">
                 <div class="row g-0 align-items-center">
                     <div class="col-2">
-                        <a href="index.html" class="logo m-0 float-start">Blogy<span class="text-primary">.</span></a>
+                        <a href="index.html" class="logo m-0 float-start">{Sinan Çıvak}<span class="text-primary"></span></a>
                     </div>
                     <div class="col-8 text-center">
                         <form action="#" class="search-form d-inline-block d-lg-none">
