--- a/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
+++ b/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
@@ -1,4 +1,5 @@
-﻿<nav class="site-nav">
+﻿
+<nav class="site-nav">
     <div class="container">
         <div class="menu-bg-wrap">
             <div class="site-navigation">
@@ -14,8 +15,10 @@
 
                         <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
                             <li class="active"><a href="index.html">Ana Sayfa</a></li>
-                            <li><a href="category.html">Yazılım</a></li>
-                            <li><a href="category.html">Genel Kültür</a></li>
+                            <li>
+                                <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 1 })">Yazılım</a>
+                            </li>
+                            <li>  <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 2 })">Yazılım</a></li>
                             <li><a href="category.html">Ülkeler</a></li>
                             <li><a href="/Imdb100Movie/Index">IMDB En İyi 100 Film</a></li>
                             <li><a href="category.html">Api2</a></li>
