--- a/SCPersonalProject/Areas/Admin/Views/BlogDetails/AddDetails.cshtml
+++ b/SCPersonalProject/Areas/Admin/Views/BlogDetails/AddDetails.cshtml
@@ -24,7 +24,8 @@
                             <select class="form-select" id="category" asp-for="BlogCategoryId" required>
                                 <option value="" disabled selected>Lütfen bir kategori seçin</option>
                                 <option value="1">Yazılım </option>
-                                <option value="2">Ülkeler</option>
+                                <option value="2">Teklonoji</option>
+                                <option value="3">Genel Kültür</option>
 
                             </select>
                         </div>
