--- a/SCPersonalProject/Views/BlogRetro/Details.cshtml
+++ b/SCPersonalProject/Views/BlogRetro/Details.cshtml
@@ -81,13 +81,15 @@
 
 
                 <div class="sidebar-box">
-                    <h3 class="heading">Categories</h3>
+                    <h3 class="heading">Kategoriler</h3>
                     <ul class="categories">
-                        <li><a href="#">Food <span>(12)</span></a></li>
-                        <li><a href="#">Travel <span>(22)</span></a></li>
-                        <li><a href="#">Lifestyle <span>(37)</span></a></li>
-                        <li><a href="#">Business <span>(42)</span></a></li>
-                        <li><a href="#">Adventure <span>(14)</span></a></li>
+                        <li><a href="#">Yazılım </a></li>
+                        <li><a href="#">Teklonoji </a></li>
+                        <li><a href="#">Genel Kültür </a></li>
+                        <li><a href="#">IMDB En İyi Filmler  </a></li>
+                        <li><a href="#">Api1 </a></li>
+                        <li><a href="#">Api2 </a></li>
+
                     </ul>
                 </div>
                 <!-- END sidebar-box -->
