--- a/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
+++ b/SCPersonalProject/Views/Shared/Components/AboutList/Default.cshtml
@@ -16,15 +16,17 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="row">
-
-                                    <div class="col-sm-6 col-md-12">
+                                    <div class="col-sm-6 col-md-5">
+                                        <div class="about-img">
+                                            <img src="@item.ImageURl" class="img-fluid rounded b-shadow-a" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-7">
                                         <div class="about-info">
-                                      <form class="form-control" action="/DownloadCV" method="post">
-                                          <label for="email">Mail Adresi:</label>
-                                          <input type="email" id="email" name="email" required>
-                                          <button class="btn btn-primary" type="submit">CV'yi İndir</button>
-                                          <button class="btn btn-primary" type="submit">CV'yi İndir</button>
-                                      </form>
+                                            <p><span class="title-s">Name: </span> <span>@item.Name</span></p>
+                                            <p><span class="title-s">Profile: </span> <span>@item.Profile</span></p>
+                                            <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
+                                            <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
                                         </div>
                                     </div>
                                 </div>
