--- a/SCPersonalProject/Views/BlogRetro/Details.cshtml
+++ b/SCPersonalProject/Views/BlogRetro/Details.cshtml
@@ -63,17 +63,17 @@
             <div class="col-md-12 col-lg-4 sidebar">
                 <div class="sidebar-box search-form-wrap">
                     <form action="#" class="sidebar-search-form">
-                        <span class="bi-search"></span>
-                        @*<input type="text" class="form-control" id="s" placeholder="Type a keyword and hit enter">*@
+                     
+         
                     </form>
                 </div>
                 <!-- END sidebar-box -->
                 <div class="sidebar-box">
                     <div class="bio text-center">
-                        <img src="~/blogy/images/person_2.jpg" alt="Image Placeholder" class="img-fluid mb-3">
+                        <img src="~/images/photo.jpg" alt="Image Placeholder" class="img-fluid mb-3">
                         <div class="bio-body">
-                            <h2>Hannah Anderson</h2>
-                            <p><a href="#" class="btn btn-primary btn-sm rounded px-2 py-2">Hakkımda</a></p>
+                            <h2>Sinan Çıvak</h2>
+                            <p><a href="/Default/Index/" class="btn btn-primary btn-sm rounded px-2 py-2">Hakkımda</a></p>
   
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                         <li><a href="#">Teklonoji </a></li>
                         <li><a href="#">Genel Kültür </a></li>
                         <li><a href="#">IMDB En İyi Filmler  </a></li>
-                        <li><a href="#">Api1 </a></li>
+                        <li><a href="#">Tarihi Olaylar </a></li>
                         <li><a href="#">Api2 </a></li>
 
                     </ul>
