--- a/SCPersonalProject/Views/Default/HeroSectionPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeroSectionPartial.cshtml
@@ -1,4 +1,7 @@
-﻿<div id="hero" class="hero route bg-image" style="background-image: url(/person/assets/img/black.jpg)">
+﻿
+
+
+<div id="hero" class="hero route bg-image" style="background-image: url(/person/assets/img/black2.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
         <div class="table-cell">
