--- a/SCPersonalProject/Views/Default/HeaderPartial.cshtml
+++ b/SCPersonalProject/Views/Default/HeaderPartial.cshtml
@@ -1,9 +1,12 @@
 ﻿<header  id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
+        <a href="#hero">
+            <h1 class="logo">
+                <img src="~/person/assets/img/logo67.png" alt="SiNaNGiF" style="max-width: 250px; max-height: 250px; ">
+            </h1>
 
-        <h1 class="logo">
-            <img src="~/person/assets/img/logo67.png" alt="SiNaNGiF" style="max-width: 250px; max-height: 250px; ">
-        </h1>
+        </a>
+      
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="~/person/assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
