--- a/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
+++ b/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
@@ -5,7 +5,7 @@
             <div class="site-navigation">
                 <div class="row g-0 align-items-center">
                     <div class="col-2">
-                        <a href="index.html" class="logo m-0 float-start">{Sinan Çıvak}<span class="text-primary"></span></a>
+                        <a href="/Default/Index/" class="logo m-0 float-start">{Sinan Çıvak}<span class="text-primary"></span></a>
                     </div>
                     <div class="col-8 text-center">
                         <form action="#" class="search-form d-inline-block d-lg-none">
@@ -14,7 +14,7 @@
                         </form>
 
                         <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
-                            <li class="active"><a href="index.html">Ana Sayfa</a></li>
+                            <li class="active"><a href="/BlogRetro/Index/">Ana Sayfa</a></li>
                             <li>
                                 <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 1 })">Yazılım</a>
                             </li>
