--- a/SCPersonalProject/Areas/Admin/Views/Admin/PartialSideBar.cshtml
+++ b/SCPersonalProject/Areas/Admin/Views/Admin/PartialSideBar.cshtml
@@ -5,7 +5,7 @@
     <ul class="metismenu list-unstyled" id="side-menu">
         <li class="menu-title">Menu</li>
         <li>
-            <a asp-action="Index" asp-controller="User">
+            <a asp-action="Index" asp-controller="Dashboard">
                 <i class="uil-users-alt"></i><span>Dashboard</span>
             </a>
         </li>
