--- a/SCPersonalProject/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/SCPersonalProject/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,7 +1,36 @@
-﻿
+﻿@model int
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    var visitorCounts = ViewData["VisitorCounts"] as List<SC.Models.VisitorCount>;
 }
 
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container mt-5">
+        <h2>Ziyaretçi Listesi</h2>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>IP Adresi</th>
+                    <th>Ziyaret Tarihi</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var visitor in visitorCounts)
+                {
+                    <tr>
+                        <td>@visitor.IpAdress</td>
+                        <td>@visitor.DataDate</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</body>
+</html>
