--- a/SCPersonalProject/Views/NewsApi/Index.cshtml
+++ b/SCPersonalProject/Views/NewsApi/Index.cshtml
@@ -6,16 +6,41 @@
 
 
 
-<h1>Apple News</h1>
 
-<ul>
-    @foreach (var article in Model)
-    {
-        <li>
-            <h3>@article.Title</h3>
-            <p>@article.Description</p>
-            <p><a href="@article.Url">Haberin Tamamını Oku</a></p>
-        </li>
-    }
-</ul>
+<div class="container mt-5">
+    <div class="row">
+        @foreach (var article in Model)
+        {
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    @if (!string.IsNullOrEmpty(article.UrlToImage))
+                    {
+                        <!-- Apply fixed dimensions to the image -->
+                        <img src="@article.UrlToImage" class="card-img-top" alt="News Image" style="width: 100%; height: 200px;">
+                    }
+                    <div class="card-body">
+                        <h5 class="card-title">@article.Title</h5>
+                        <p class="card-text">@article.Content</p>
+                        <a href="@article.Url" target="_blank" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <nav>
+                <ul class="pagination justify-content-center">
+                    @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                    {
+                        <li class="page-item @(i == ViewBag.Page ? "active" : "")">
+                            <a class="page-link" href="@Url.Action("Index", new { page = i, pageSize = ViewBag.PageSize })">@i</a>
+                        </li>
+                    }
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
+
 
