--- a/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
+++ b/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
@@ -18,11 +18,12 @@
                             <li>
                                 <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 1 })">Yazılım</a>
                             </li>
-                            <li>  <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 2 })">Teklonoji</a></li>
+                            <li>  <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 2 })">E-Fatura</a></li>
+
                             <li>  <a href="@Url.Action("CategoryDetails", "BlogRetro", new { id = 3 })">Genel Kültür</a></li>
                             <li><a href="/Imdb100Movie/Index">IMDB En İyi 100 Film</a></li>
                             <li><a href="/DateLine/Index/">Tarihi Olaylar</a></li>
-                            <li><a href="category.html">APi3</a></li>
+                            <li><a href="/NewsApi/Index/">Teklonoji Haberleri</a></li>
                         </ul>
                     </div>
                     <div class="col-2 text-end">
